        -Added a type variable, that is this.type set in all other object classes.

    (Changed)InvisWall.java
        -Sort of updaed the x,y,sizex,sizey when constructing a InvisWall

    (Removed) KeyHandler.java
        -I removed he lastPressed due to the fact that I finally understand what keyreleased actually did and its pretty
        cool.

    (Notes)PlayerData, People, Game
        -You have to make the player NOT move but instead move the entities. (Done-ish)


Current date: 5/25/2022

    (Changed)Game.java
        In update() method, changed or fixed collision thing. Where now it somehow allows for the people collision, WHICH, keep in mind I thought would be its own seperate issue.

        Along with that sort of created a new bug?

    (New) Entity.java
        A new comment rant about a bug that I somehow fixed by smashing my head against this metaphorical rock. 

    (Changes)CollsionDetect.java
        Changed a bit of things to understand my code a bit more, and come to the conclusion that if something collides with another thing both things DONT need to have their 
        collides variable = true.

        Why is that the case? I think, no rather I have no idea.
        ^
        Actually its because in Game.java we reset the collides variable to false before checking it against other Entities, therefore if we ran a collision detection (Player vs walls)
        and made both true when colliding. In the next check (walls vs Player), before that check happens the walls.collides = false; already occured, therefore it can be modified to
        make minor FPS improvements?

    



    GENERAL NOTES AND TODAYS RANT 
        WHY DOES ANY OF MY CODE WORK?
        HOW DOES IT EVEN WORK?
        IT IS SOMEWHAT ORGANIZED I CAN UNDERSTAND TO AN EXTENT WHAT EVERYTHING DOES AND HOW IT COMES TOGETHER ON THE MAIN BOARD, BUT WHY DOES IT WORK?
        I AM LOSING IT.