@@ -20,7 +20,6 @@ public class Entity{
     public Rectangle hitbox;
     public boolean collides;
     public int movement;
-    public boolean moved;
     public String type;
 
     // public String direction; 
@@ -31,7 +30,7 @@ public class Entity{
         eSpeed = 10;
         sizeX = 200;
         sizeY = 200;
-        hitbox = new Rectangle(posX-1, posY-1, sizeX-1, sizeY-1);
+        hitbox = new Rectangle(posX, posY, sizeX, sizeY);
         collides = false;
         //FILE PATH TO DEFUALT SPRITE TEXTURE
         //WHAT NEEDS TO BE ADDED IS DEFAULT HITBOX
@@ -169,21 +168,16 @@ public class Entity{
 
         BufferedImage i = this.sprite;
         g3.drawImage(i, posX, posY, sizeX, sizeY, null);
-        g3.draw(this.hitbox);
+
 
     }
     
     public void drawHitboxes(Graphics2D g3){
 
-        // BufferedImage i = this.sprite;
-        // g3.drawImage(i, posX, posY, sizeX, sizeY, null);
         g3.draw(this.hitbox);
 
     }
 
-    // public int getX() { return x};
-    // public int getY() { return y};
-    // public int getSpeed() { return speed};
 
 
 
